[package]
name = "twitch-hud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_colours = "1.1.1"
anyhow = "1.0.64"
nom = "7.1.1"

[profile.release]
lto = "fat"
debug = 0
opt-level = 3
strip = true
